update gulp for Less CSS

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "gulp": "^4.0.2",
     "gulp-less": "^5.0.0",
     "gulp-sass": "^5.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
